--- a/index.html
+++ b/index.html
@@ -132,14 +132,13 @@
     <!-- side navbar  -->
     <div id="sidebar-nav" class="sidebar-nav">
       <ul class="menu-list">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Auctions</a></li>
-        <li><a href="#">Contests</a></li>
-        <li><a href="#">Project</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Freelancers</a></li>
-        <li><a href="#">Forum</a></li>
-      </ul>
+        <li><a href="#">flights</a></li>
+        <li><a href="#">Hotels</a></li>
+        <li><a href="#">Destination</a></li>
+        <li><a href="#">car rents</a></li>
+        <li><a href="#">offers</a></li>
+        <li><a href="#">stays</a></li>
+       </ul>
     </div>
     <!-- side navbar  -->
 
